<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_combat"
        android:title="@string/terminer"
        app:showAsAction="ifRoom">
        <menu>
            <item android:title="@string/fighter_one">
                <menu>
                    <item
                        android:id="@+id/vic_one_ko"
                        android:title="@string/victoire_ko"/>
                    <item
                        android:id="@+id/vic_one_tko"
                        android:title="@string/victoire_tko"/>
                    <item
                        android:id="@+id/vic_one_soumission"
                        android:title="@string/victoire_soumission"/>
                </menu>
            </item>
            <item android:title="@string/fighter_two">
                <menu>
                    <item
                        android:id="@+id/vic_two_ko"
                        android:title="@string/victoire_ko"/>
                    <item
                        android:id="@+id/vic_two_tko"
                        android:title="@string/victoire_tko"/>
                    <item
                        android:id="@+id/vic_two_soumission"
                        android:title="@string/victoire_soumission"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>