<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc_gris"
    android:orientation="vertical"
    tools:context=".Combat">

    <!-- "Dernières Actions enregistrées " -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/d_a_e"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
    <!-- Liste des 5 dernièeres actions -->
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/action_tmp_one"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/action_tmp_two"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/action_tmp_three"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/action_tmp_four"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/action_tmp_five"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/action_tmp_six"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>
    <!-- Trait horizontal -->
    <View
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@android:color/black"
        android:layout_marginTop="30dp"/>
    <!-- Actions -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- LinearLayout combattant 1 -->
        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/textview_comattant_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ED3124"
                android:textSize="22sp" />

            <!-- Bouton Jab -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/red_jab" />

                <Button
                    android:tag="jab_un_btn"
                    android:id="@+id/jab_un_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/jab"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Uppercut -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/red_upper" />

                <Button
                    android:tag="uppercut_un_btn"
                    android:id="@+id/uppercut_un_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/uppercut"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Kick -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/red_kick" />

                <Button
                    android:tag="kick_un_btn"
                    android:id="@+id/kick_un_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/kick"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Tackle -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/red_tackle" />

                <Button
                    android:tag="tackle_un_btn"
                    android:id="@+id/tackle_un_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/plaquage"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Immobilisation -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/red_immobilisation" />

                <Button
                    android:tag="immobilisation_un_btn"
                    android:id="@+id/immobilisation_un_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/immobilisation"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>

        </LinearLayout>
        <!-- Ligne verticale séparatrice -->
        <View
            android:layout_width="1dp"
            android:layout_height="395dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/black" />
        <!-- LinearLayout combattant 2 -->
        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/textview_comattant_deux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#23A9B7"
                android:textSize="22sp" />

            <!-- Bouton Jab -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/blue_jab" />

                <Button
                    android:tag="jab_deux_btn"
                    android:id="@+id/jab_deux_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/jab"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Uppercut -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/blue_upper" />

                <Button
                    android:tag="uppercut_deux_btn"
                    android:id="@+id/uppercut_deux_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/uppercut"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Kick -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/blue_kick" />

                <Button
                    android:tag="kick_deux_btn"
                    android:id="@+id/kick_deux_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/kick"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Tackle -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/blue_tackle" />

                <Button
                    android:tag="tackle_deux_btn"
                    android:id="@+id/tackle_deux_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/plaquage"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>
            <!-- Bouton Immobilisation -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/blue_immobilisation" />

                <Button
                    android:tag="immobilisation_deux_btn"
                    android:id="@+id/immobilisation_deux_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/immobilisation"
                    android:textColor="@android:color/white"
                    android:onClick="onActionBtnClicked"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>